--- a/app/src/main/res/layout/activity_home2.xml
+++ b/app/src/main/res/layout/activity_home2.xml
@@ -28,11 +28,11 @@
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
-               android:icon="@drawable/icon__person_prof" />
+               android:icon="@drawable/icon_friends" />
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
-               android:icon="@drawable/ic_baseline_card_membership_24" />
+               android:icon="@drawable/icon__person_prof" />
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
