--- a/app/src/main/res/layout/fragment_prof.xml
+++ b/app/src/main/res/layout/fragment_prof.xml
@@ -3,12 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="@dimen/_5sdp"
     tools:context=".ui.ProfFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycl_proff"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         tools:listitem="@layout/item_prof_layout"
         />
 
