--- a/app/src/main/res/layout/fragment_notefication.xml
+++ b/app/src/main/res/layout/fragment_notefication.xml
@@ -2,13 +2,15 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="@dimen/_5sdp"
     tools:context=".ui.NoteficationFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+   <androidx.recyclerview.widget.RecyclerView
+       android:id="@+id/recycl_NOT"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       tools:listitem="@layout/item_notefication_layout"
+       />
 
 </FrameLayout>
