--- a/app/src/main/res/layout/item_prof_layout.xml
+++ b/app/src/main/res/layout/item_prof_layout.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="@dimen/_5sdp"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -27,26 +26,20 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/confirm_btn"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:layout_constraintTop_toBottomOf="@id/prof_name"
         app:layout_constraintStart_toEndOf="@id/prof_img"
-        android:text="confirm"
-      />
+        android:text="confirm"/>
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/delete_btn"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/prof_name"
-        app:layout_constraintStart_toEndOf="@id/prof_name"
+        android:layout_height="match_parent"
+        android:layout_marginStart="44dp"
         android:backgroundTint="#bebebe"
         android:text="DELETE"
-        />
-
-
-
-
-
-
+        app:layout_constraintStart_toEndOf="@id/confirm_btn"
+        app:layout_constraintTop_toBottomOf="@id/prof_name" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
